# exasol-quickstart

./: LICENSE  README.md  README.pypi.md  pyproject.toml
.github/workflows/: release.yml
exasol_quickstart/: __init__.py  cli.py
