[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exasol-quickstart"
version = "0.0.1"
description = "One command to try Exasol with AI add-ons (MCP Server, JSON Tables). Preview — name placeholder."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "krishna-exasol" }]
keywords = ["exasol", "mcp", "json-tables", "installer", "quickstart", "analytics", "database"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/krishna-exasol/exasol-quickstart"
Documentation = "https://krishna-exasol.github.io/bundle-installation-methods/case-studies/recommended-approach/"

[project.scripts]
exasol-quickstart = "exasol_quickstart.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["exasol_quickstart"]
