[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exasol-quickstart"
version = "0.3.11"
description = "One command to try Exasol with AI add-ons (MCP Server + JSON Tables) — auto-selects the right setup for your OS (Windows / macOS / Linux)."
readme = "README.pypi.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "krishna-exasol" }]
keywords = ["exasol", "mcp", "json-tables", "installer", "quickstart", "analytics", "database"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/krishna-exasol/exasol-quickstart"
Repository = "https://github.com/krishna-exasol/exasol-quickstart"

[project.scripts]
exasol-quickstart = "exasol_quickstart.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["exasol_quickstart"]
